--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.FlowerShop"
         tools:targetApi="31">
         <activity
+            android:name=".HomePage"
+            android:exported="false" />
+        <activity
+            android:name=".ChangePassword"
+            android:exported="false"
+            android:theme="@style/Theme.FlowerShop" />
+        <activity
             android:name=".OrdersView"
             android:exported="false" />
         <activity
