--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.flowershop">
 
     <application
         android:allowBackup="true"
@@ -12,6 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FlowerShop"
         tools:targetApi="31">
+        <activity
+            android:name=".CheckOut"
+            android:exported="false" />
+        <activity
+            android:name=".MakeCustomBouquetScreen"
+            android:exported="false" />
+        <activity
+            android:name=".BuyBouquetScreen"
+            android:exported="false" />
+        <activity
+            android:name=".ShopType"
+            android:exported="false" />
+        <activity
+            android:name=".FunFactFlower"
+            android:exported="false" />
         <activity
             android:name=".HomePage"
             android:exported="false" />
